k8s/deploy_with_env_secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-k8s-sample-app
  labels:
    app: go-k8s-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-k8s-sample-app
  template: # pod template
    metadata:
      labels:
        app: go-k8s-sample-app
    spec:
      containers:
        - name: go-k8s-app
          image: babulal107/go-k8s-sample-app:latest  # Using local image OR replace with your image from remote registry
          imagePullPolicy: Never  # Optional This forces Kubernetes to use the local image
          ports:
            - containerPort: 8080
