k8s/deploy_with_mv_single_file_secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-k8s-sample-app
  labels:
    app: go-k8s-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-k8s-sample-app
  template: # pod template
    metadata:
      labels:
        app: go-k8s-sample-app
    spec:
      containers:
        - name: go-k8s-app
          image: babulal107/go-k8s-sample-app:latest  # Using local image OR replace with your image from remote registry
          imagePullPolicy: Never # IfNotPresent  # Optional This forces Kubernetes to use the local image
          volumeMounts:
            - name: app-secret-config
              readOnly: true
              mountPath: /opt/config/db_config.yaml   # Go-code level, you can read the entire file at once and parse it.
              subPath: db_config.yaml   # Ensure the secret is mounted as a single file
          ports:
            - containerPort: 8080
      volumes:
        - name: app-secret-config
          secret:
            secretName: db-secret
