k8s/service_with_load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-app-load-balancer-service
spec:
  type: LoadBalancer
  selector:
    app: go-k8s-sample-app
  ports:
    - protocol: TCP
      port: 80
      # By default, and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8080
