k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /v1 # path-base routing
            pathType: Prefix
            backend:
              service:
                name: go-k8s-app-service
                port:
                  number: 80
